--- a/test1/www/html/index.html
+++ b/test1/www/html/index.html
@@ -31,11 +31,13 @@
   </div>
 </div>
 
+{% include "components/slider.html" %}
+
 <div class="fpanel">
   <div class="container">
     <section>
       <h2 class="heading h-section lrg-heading-grp" data-barley="index_hiw_heading" data-barley-editor="simple">What is BookSea?</h2>
-      <p data-barley="index_hiw_text_1" data-barley-editor="simple">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat tmattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>                
+      <p data-barley="index_hiw_text_1" data-barley-editor="simple">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat tmattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
       <p data-barley="index_hiw_text_2" data-barley-editor="simple">Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
     </section>
   </div>
@@ -47,7 +49,7 @@
   <div class="container">
     {% include "components/how-it-works.html" %}
   </div>
-</div>   
+</div>
 
 <div class="fpanel">
   <div class="container">
@@ -72,8 +74,8 @@
       {% endfor %}
     </div>
   </div>
-</div>    
+</div>
 
-{% include "components/testimonials.html" %}                  
+{% include "components/testimonials.html" %}
 
 {% endblock %}
